color and theme changes

--- a/src/app/dropdown-filter/dropdown-filter.component.scss
+++ b/src/app/dropdown-filter/dropdown-filter.component.scss
@@ -5,12 +5,24 @@
   ng-select {
     width: 100%;
   }
-  .cityName {
-    font-size: 14px;
-    margin-top: 20px;
-  }
+}
+h2 {
+  margin-top: 20px;
+  text-align: center;
+  color: #fff;
 }
 
+::ng-deep {
+  .ng-select.ng-select-single
+    .ng-select-container
+    .ng-value-container
+    .ng-input {
+    top: 10px;
+    input {
+      font-size: 20px;
+    }
+  }
+}
 ::ng-deep .ng-select {
   :hover {
     background-color: #74d143;
@@ -25,6 +37,8 @@
   .ng-select-container {
     border-radius: 15px;
     height: inherit !important;
+    border: 0;
+    min-height: 45px;
     :hover {
       background: transparent;
     }
