--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
 @import "~@ng-select/ng-select/themes/default.theme.css";
+body {
+  background: #333335;
+  font-family: sans-serif;
+  font-size: 20px;
+}
