--- a/src/app/dropdown-filter/dropdown-filter.component.html
+++ b/src/app/dropdown-filter/dropdown-filter.component.html
@@ -8,9 +8,4 @@
   >
   </ng-select>
 </div>
-<div class="container">
-    <h2 class="cityName">
-        {{ selectedCity?.name }}
-    </h2>
-</div>
-
+<h2 *ngIf="selectedCity">{{ selectedCity.name }} ({{ selectedCity.state }})</h2>
